[Bug 1209] Problem with id usage across schema http://issues.apache.org/jira/browse/XERCESC-1209

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@176114 13f79535-47bb-0310-9956-ffa450edef68